Added user account registration

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,14 @@
 <body>
     <h1>Video Conferencing</h1>
 
+    <a href="/users/register">
+        <button>Register</button>
+    </a>
+    
+    <a href="/users/login">
+        <button>Login</button>
+    </a>
+
     <a href="/room">
         <button>Create Room</button>
     </a>
