--- a/views/css/room.css
+++ b/views/css/room.css
@@ -1,12 +1,103 @@
-body {
-  margin: 0px;
-  background-color: #0a0a0a;
+*{
+  box-sizing: border-box;
 }
 
+body {
+  background-color: #4a4a4a;
+  margin: 0px;
+  overflow-x: auto;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #4a4a4a;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #030303;
+}
+
+#chat-bar
+{
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  border: 4px solid #030303;
+  border-radius: 0px 12px 12px 0px;
+  float: left;
+  background-color: lightgray;
+  margin: auto;
+  width: 20%;
+  padding: 16px;
+}
+
+#chat-bar ul
+{
+  height: 100%;
+  padding: 0;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
+#chat-bar ul li
+{
+  padding-right: 8px;
+  list-style: none; 
+  font-size: 20px;
+  color:  #4a4a4a;
+}
+
+#chat-bar form
+{
+  align-content: flex-end;
+  box-sizing: border-box;
+  
+}
+
+#chat-bar input
+{
+  box-sizing: border-box;
+  width: 100%;
+  margin-bottom: 4px;
+  background-color: #f1f1f1;
+  color: #4a4a4a;
+  border: 4px solid #030303;
+  border-radius: 4px;
+  font-size: 24px;
+}
+
+#chat-bar button
+{
+  width: 100%;
+  background-color: #4a4a4a;
+  color: #f1f1f1;
+  border: 4px solid #030303;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 24px;
+  overflow: hidden;
+}
+
+
 #video-grid {
+  float: left;
+  width: 70%;
   display: grid;
+  height: 90vh;
   grid-template-columns: repeat(auto-fill, 360px);
   grid-auto-rows: 360px;
+  overflow-x: auto;
 }
 
 video {
@@ -14,6 +105,6 @@ video {
   height: 328px;
   object-fit: cover;
   border-radius: 12px;
-  border: 2px solid #030303;
+  border: 4px solid #030303;
   margin: 16px;
 }
