--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Conferencing App</title>
-</head>
-<body>
-    <h1>Video Conferencing</h1>
-
-    <a href="/users/register">
-        <button>Register</button>
-    </a>
-    
-    <a href="/users/login">
-        <button>Login</button>
-    </a>
-
-    <a href="/room">
-        <button>Create Room</button>
-    </a>
-        
-</body>
-</html>
+<%- include("./partials/header"); %>
+<section id="content">
+    <h1>Welcome to ezChat</h1>
+    <h2>Video Conferencing Made Easy</h2>
+    <button onClick="CreateRoom()">Create a Room</button>
+    <h3>Or</h3>
+    <div id="join-room">
+        <input id="roomIdField" placeholder="Paste Room Code Here" /><button onClick="JoinRoom()">Join Room</button>
+    </div>
+</section>
