--- a/views/room.ejs
+++ b/views/room.ejs
@@ -1,21 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+<div id="chat-bar">
+    <ul id="messages"></ul>
+    <form action="">
+        <input id="m" autocomplete="off" placeholder="Type a Message..."/>
+        <button>SEND</button>
+    </form>
+</div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/room.css">
-    <script>
-        const ROOM_ID = "<%= roomId %>";
-    </script>
-    <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-    <script src="/socket.io/socket.io.js" defer></script>
-    <script src="roomManager.js" defer></script>
-    <title>Room</title>
-</head>
-
-<body>
-    <div id="video-grid"></div>
-</body>
-
-</html>
+<div id="video-grid"></div>
