--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <section id="content">
     <h1>Welcome to ezChat</h1>
     <h2>Video Conferencing Made Easy</h2>
+    <!--<button onClick="CreateRoom()">Join Room</button>-->
     <button onClick="CreateRoom()">Create a Room</button>
     <h3>Or</h3>
     <div id="join-room">
