--- a/views/css/room.css
+++ b/views/css/room.css
@@ -65,6 +65,21 @@ body {
   
 }
 
+#chat-bar label
+{
+  
+  box-sizing: border-box;
+  width: 100%;
+  margin-top: 4px;
+  background-color: #f1f1f1;
+  color: #4a4a4a;
+  border: 4px solid #030303;
+  border-radius: 4px;
+  font-size: 24px;
+  text-align: center;
+}
+
+
 #chat-bar input
 {
   box-sizing: border-box;
@@ -100,16 +115,17 @@ body {
   grid-template-columns: repeat(auto-fill, 360px);
   grid-auto-rows: 360px;
   overflow-x: auto;
+  padding: 0
 }
 
 video {
   width: 328px;
   height: 328px;
   object-fit: cover;
-  border-radius: 12px;
-  border: 4px solid #030303;
   margin: 16px;
   margin-bottom: 0px;
+  border-radius: 12px;
+  border: 4px solid #030303;
 }
 
 .videoLabel {
@@ -117,8 +133,7 @@ video {
   font: bold 18px Arial, Sans-Serif;
   line-height: 16px;
   height: 24px;
-  width: 90%;
+  width: 100%;
   margin-bottom: 16px;
-  margin-left: 16px;
   text-align: center;
 }
